--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,6 @@ html {
 html, body {
   width: 100%;
   height: 100%;
-  overflow: hidden; /* Scroll wheel handler එක පාවිච්චි කරද්දී මේක වැදගත් */
+ 
   background-color: #000000 !important;
 }
